// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClipPathImage it should render properly with required props 1`] = `
<Card
  className="ClipPathImage"
  hasAnimationOnHover={false}
>
  <div
    className="primary content"
  >
    <img
      alt=""
      className="image"
      src="image.png"
    />
    <h6
      className="title"
    >
      Test title
    </h6>
  </div>
</Card>
`;

exports[`ClipPathImage it should render properly with some props assigned 1`] = `
<Card
  className="ClipPathImage"
  hasAnimationOnHover={false}
>
  <div
    className="primary content"
  >
    <img
      alt="Test picture"
      className="image"
      src="test.png"
    />
    <h6
      className="title"
    >
      Test title
    </h6>
  </div>
</Card>
`;
